MOBI-283 pagePanel fixed positioning not reliable on iOS removing floating bottom tabs
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@31529 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/resources/themes/bberry/2_tabset.css
+++ b/resources/themes/bberry/2_tabset.css
@@ -59,9 +59,6 @@
     color: #ffffff ;
 }
 
-.mobi-tabset-tabs-bottom-footer > .mobi-tabset-tabs{
-    margin-bottom:50px;
-}
 .mobi-tabset-tabs-top-header > .mobi-tabset-tabs{
     background-color: #333333;
     padding-top: 2px;
