--- a/resources/themes/ios/2_tabset.css
+++ b/resources/themes/ios/2_tabset.css
@@ -50,7 +50,3 @@
     height:100%;
     padding-top:48px;
 }
-
-.mobi-tabset-tabs-bottom-footer > .mobi-tabset-tabs{
-    margin-bottom:50px;
-}
