--- a/resources/themes/lightning/3_tabset.css
+++ b/resources/themes/lightning/3_tabset.css
@@ -87,9 +87,6 @@
     top: 0;
     left:0;
 }
-.mobi-tabset-tabs-bottom-footer > .mobi-tabset-tabs{
-    margin-bottom:0;
-}
 .mobi-tabset-tabs-top-header > .mobi-tabset-tabs{
     margin-top:0;
 }
